@@ -8891,20 +8891,23 @@ gtk_icon_view_accessible_model_row_changed (GtkTreeModel *tree_model,
   index = gtk_tree_path_get_indices(path)[0];
   a11y_item = gtk_icon_view_accessible_find_child (atk_obj, index);
 
-  widget = GTK_ACCESSIBLE (atk_obj)->widget;
-  icon_view = GTK_ICON_VIEW (widget);
-  item = a11y_item->item;
-
-  name = gtk_icon_view_item_accessible_get_name (ATK_OBJECT (a11y_item));
-
-  if (!name || strcmp (name, "") == 0)
+  if (a11y_item)
     {
-      gtk_icon_view_set_cell_data (icon_view, item);
-      text = get_text (icon_view, item);
-      if (text)
+      widget = GTK_ACCESSIBLE (atk_obj)->widget;
+      icon_view = GTK_ICON_VIEW (widget);
+      item = a11y_item->item;
+
+      name = gtk_icon_view_item_accessible_get_name (ATK_OBJECT (a11y_item));
+
+      if (!name || strcmp (name, "") == 0)
         {
-          gtk_text_buffer_set_text (a11y_item->text_buffer, text, -1);
-          g_free (text);
+          gtk_icon_view_set_cell_data (icon_view, item);
+          text = get_text (icon_view, item);
+          if (text)
+            {
+              gtk_text_buffer_set_text (a11y_item->text_buffer, text, -1);
+              g_free (text);
+            }
         }
     }
 
