@@ -1,3 +1,8 @@
+2008-12-23  Li Yuan  <li.yuan@sun.com>
+
+	* gtk/gtkiconview.c: (gtk_icon_view_accessible_model_row_changed):
+	Bug #549251. No need to set name if there is no a11y item object.
+
 2008-12-21  Yair Hershkovitz  <yairhr@gmail.com>
 
 	Bug 565203: RTL locales: icons are misplaced when horizontal 
